name:                todobackend-common
version:             0.1.0.0
synopsis:            Common stuff (e.g. model) for todobackends
description:         Please see README.md
homepage:            http://github.com/jhedev/todobackend-haskell
license:             MIT
license-file:        LICENSE
author:              Joel Hermanns
maintainer:          joel.hermanns@gmail.com
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:       TodoBackend.Model
                       , TodoBackend.Utils
  build-depends:         base >= 4.7 && < 5
                       , aeson
                       , http-types
                       , monad-logger
                       , path-pieces
                       , persistent
                       , persistent-sqlite
                       , persistent-template
                       , resourcet
                       , text
                       , transformers
                       , wai
                       , wai-extra

  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jhedev/todobackend
