name:                todobackend-spock
version:             0.1.0.0
synopsis:            Todobackend implementation using Spock
description:         Please see README.md
license:             MIT
license-file:        LICENSE
author:              Joel Hermanns
maintainer:          joel.hermanns@gmail.com
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable todobackend-spock
  main-is:             Main.hs
  ghc-options:         -Wall
  -- other-modules:       
  -- other-extensions:    
  build-depends:         base >=4.6 && <4.9
                       , http-types
                       , Spock
                       , path-pieces
                       , persistent-sqlite
                       , todobackend-common
                       , transformers

  hs-source-dirs:      src
  default-language:    Haskell2010