name:                todobackend-yesod
version:             0.1.0.0
synopsis:            Todobackend implementation using Yesod
description:         Please see README.md
license:             MIT
license-file:        LICENSE
author:              Joel Hermanns
maintainer:          joel.hermanns@gmail.com
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable todobackend-yesod
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.6 && <4.9
                     , persistent-sqlite
                     , todobackend-common
                     , transformers
                     , wai
                     , warp
                     , yesod
  hs-source-dirs:      src
  default-language:    Haskell2010
