[package]
name = "common"
version = "0.1.0"
authors = ["Andika Demas Riyandi <andika.riyan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
