[package]
name = "rust-frontend"
version = "0.1.0"
categories = ["wasm"]
authors = ["Andika Demas Riyandi <andika.riyan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
common = { path = "../common/" }
console_error_panic_hook = { version = "0.1.5", optional = true }
cfg-if = "1.0"
js-sys = "0.3.45"
lazy_static = "1.4.0"
log = "0.4.11"
dominator = "0.5.12"
futures = "0.3.6"
futures-signals = "0.3.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = { version = "0.2.67", features = [ "serde-serialize" ] }
wasm-bindgen-futures = "0.4.18"
wasm-logger = { version = "0.2.0", optional = true }

[dependencies.web-sys]
version = "0.3.45"
features = [
    "Storage",
    "Url",
    "XmlHttpRequest",
    "Headers",
    "Response",
    "RequestInit",
    "RequestMode",
    "Window"
]

[features]
ts_test = []
develop = ["wasm-logger", "console_error_panic_hook" ]

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
